# MonetDBe-Java

./: .gitignore  CMakeLists.txt  README.md  build_dev.sh  pom.xml  pom_release.xml  run_dev.sh  test_list.txt
.github/: workflow.old
.github/workflows/: cmake.yml  linux-dev.yml  linux-release.yml  linux.yml  mac-dev.yml  mac-release.yml  mac.yml  windows.yml
docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  package-list
docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
docs/org/monetdb/monetdbe/: MonetBlob.html  MonetCallableStatement.html  MonetClob.html  MonetColumn.html  MonetConnection.html  MonetDataSource.html  MonetDatabaseMetaData.html  MonetDriver.html  MonetNative.html  MonetParameterMetaData.html  MonetPreparedStatement.html  MonetResultSet.html  MonetResultSetMetaData.html  MonetStatement.html  MonetTypes.html  MonetWrapper.html  package-frame.html  package-summary.html  package-tree.html
example/: ComplexTypes.java  ConnectionTypes.java  HelloWorld.java  InsertAndQuery.java  InsertAndQuerySimple.java  JDBC_API_Tester.java  Metadata.java  MgBench.java  Movies.java  MultiConnections.java  MultiThreadAccess.java  PreparedQueries.java  RemoteConnectionTests.java  SimpleTypes.java  Taxi.java  TestMonetDBeJava.java  UpdateCount.java
java/: pom-manual-release.xml  pom.xml
java/src/test/java/test/: AllTests.java  RunTestsApp.java  Test_01_OpenAndCloseConnection.java  Test_02_CloseConnectionTwice.java  Test_03_AutoCommit.java  Test_04_SimpleInsertAndQueryStatements.java  Test_05_BasicInsertAndQueryStatements.java  Test_06_ComplexInsertAndQueryStatements.java  Test_07_SimplePreparedStatements.java  Test_08_ComplexPreparedStatements.java  Test_09_LoadAndQueryTaxi.java  Test_10_MetaData.java  Test_11_ConcurrentConnections.java  Test_12_BatchesAndJoinsMovies.java  Test_13_Schema.java  Test_14_MultipleResultSet.java  Test_15_Transactions.java  Test_16_MixedOrderStatements.java  Test_17_QueryInThread.java  Test_18_Multithreaded_Connection.java  Test_19_ParameterMetadata.java  Test_20_PreparedResultMetadata.java  Test_21_ConnectionOptions.java  Test_22_GetObject.java  Test_23_LogFile.java
lib/: libmonetdbe-lowlevel.dylib  progress.txt
lib/default/linux/direct/: libmapi.so.12  libmonetdb5.so.30  libmonetdbe.so.1  libmonetdbsql.so.11  libstream.so.14
lib/default/linux/direct-untouched/: libmapi.so.12  libmonetdb5.so.30  libmonetdbe.so.1  libmonetdbsql.so.11  libstream.so.14
lib/default/linux/direct-untouched-default/: libmapi.so.12  libmonetdbsql.so.11
lib/default/mac/: libmonetdbe-java.dylib
lib/default/mac/direct/: libmapi.12.dylib  libmonetdb5.30.dylib  libmonetdbe.1.dylib  libmonetdbsql.11.dylib  libstream.14.dylib
lib/linux/direct/: libmonetdb5.so.30  libmonetdbe.so.1  libstream.so.14
lib/mac/: libmonetdbe-java.dylib
lib/oct/linux/direct/: libmapi.so.12  libmonetdb5.so.30  libmonetdbe.so.1  libmonetdbsql.so.11  libstream.so.14
lib/oct/linux/direct-originals/: libmapi.so.12  libmonetdb5.so.30  libmonetdbe.so.1  libmonetdbsql.so.11  libstream.so.14
lib/oct/mac/: libmonetdbe-java.dylib
lib/oct/mac/direct/: libmapi.12.dylib  libmonetdb5.30.dylib  libmonetdbe.1.dylib  libmonetdbsql.11.dylib  libstream.14.dylib
native/: pom.xml
native/jni/: monetdbe-java-native.c  monetdbe._lowlevel.c  monetdbe._lowlevel_noint128mapi.c  org_monetdb_monetdbe_MonetNative.h
other/: CMakeLists.txt  HEADER.html  test_list.txt  upload_docs_jar.sh
scripts/: build_dev.sh  build_slim.sh  build_windows.txt  run_dev.sh
scripts/linux/: build_fat.sh  build_slim.sh  run_dev.sh  run_slim.sh
scripts/mac/: build_fat.sh  build_slim.sh  change_rpath.sh  release_slim.sh  run_dev.sh  run_slim.sh
src/jni/: monetdbe._lowlevel.c  monetdbe._lowlevel.c.old  nl_cwi_monetdb_monetdbe_MonetNative.h  org_monetdb_monetdbe_MonetNative.h
src/main/java/org/monetdb/monetdbe/: MonetBlob.java  MonetCallableStatement.java  MonetClob.java  MonetColumn.java  MonetConnection.java  MonetDataSource.java  MonetDatabaseMetaData.java  MonetDatabaseMetadata.java  MonetDriver.java  MonetNative.java  MonetParameterMetaData.java  MonetPreparedStatement.java  MonetResultSet.java  MonetResultSetMetaData.java  MonetStatement.java  (+2 more)
src/main/jni/: monetdbe._lowlevel.c
src/test/: AllTests.java  Configuration.java  Test_01_OpenAndCloseConnection.java  Test_02_CloseConnectionTwice.java  Test_03_AutoCommit.java  Test_04_SimpleInsertAndQueryStatements.java  Test_05_BasicInsertAndQueryStatements.java  Test_06_ComplexInsertAndQueryStatements.java  Test_07_PreparedStatements.java  Test_07_SimplePreparedStatements.java  Test_08_ComplexPreparedStatements.java  Test_09_LoadAndQueryTaxi.java  Test_10_MetaData.java  Test_11_ConcurrentConnections.java  Test_12_BatchesAndJoinsMovies.java  Test_13_Schema.java  Test_14_MultipleResultSet.java  Test_15_Transactions.java  Test_17_QueryInThread.java
src/test/java/: TestMonetDBeJava.java
test/: TestMonetDBeJava.java
(+37 files in other folders)
